Changed: updated controllers, models and routes for users
