# src/users/routes/auth.route.js
@@ -3,8 +3,6 @@ import { methods as authController } from "../controllers/auth.controller.js";
 
 const router = Router();
 
-router.get("/", authController.getAuth);
-router.post("/post", authController.postAuth);
-router.get("/login", authController.getByData);
+router.get("/get", authController.get);
 
 export default router;
